# stocks.console

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Dockerfile  docker-compose.yml  readme.md  stocks.console.sln  vcpkg-configuration.json  vcpkg.json
db/: Dockerfile  init.sql
stock.console.unittest/: finn_hub.unittest.cpp  macd.unittest.cpp  obv.unittest.cpp  rsi.unittest.cpp  rsi_unittest.cpp  sma.unittest.cpp  stock.console.api.alpacha.unittest.cpp  stock.console.unittest.cpp  stock.console.unittest.vcxproj  stock.console.unittest.vcxproj.filters  stock.indicator.unittest.cpp  stock.strategy.unittest.cpp  stockconsole.indicator.rsi.unittest.cpp  stockconsole.indicator.sma.unittest.cpp  test.cpp
stocks.console/: CMakeLists.txt  CMakeUserPresets.json  account_details.cpp  account_details.h  alpacha.cpp  alpacha.h  asset_validation.cpp  asset_validation.h  currency_validation.cpp  currency_validation.h  date_validation.cpp  date_validation.h  indicator_analysis.cpp  indicator_analysis.h  macd.cpp  macd.h  main.cpp  main.h  order.cpp  order.h  rsi.cpp  rsi.h  rsi2.cpp  rsi2.h  sma.cpp  sma.h  stock_detail.cpp  stock_detail.h  stocks.console.cpp  stocks.console.vcxproj  stocks.console.vcxproj.filters  string_utilities.cpp  string_utilities.h  vcpkg.json
stocks.console.api/: CMakeLists.txt  alpacha.cpp  alpacha.h  alpacha_account.cpp  alpacha_marketdata.cpp  alpachat.cpp  alpachat.h  finn_hub.cpp  finn_hub.h  http.cpp  http.h  pch.h  stocks.console.api.vcxproj  stocks.console.api.vcxproj.filters  vcpkg.json
stocks.console.api/include/: finn_hub.h
stocks.console.api/src/: alpacha.cpp  finn_hub.cpp  http.cpp
stocks.console.fundamental.analysis/: CMakeLists.txt
stocks.console.fundamental.analysis/include/quantative/: eps.h
stocks.console.fundamental.analysis/src/quantative/: eps.cpp
stocks.console.indicator/: CMakeLists.txt  CMakeUserPresets.json  macd.cpp  macd.h  obv.cpp  obv.h  pch.h  rsi.cpp  rsi.h  sma.cpp  sma.h  stocks.console.indicator.cpp  stocks.console.indicator.vcxproj  stocks.console.indicator.vcxproj.filters
stocks.console.indicator/include/: indicator.h  macd.h  obv.h  rsi.h  sma.h  stochastic_oscillator.h
stocks.console.indicator/include/momentum/: roc.h
stocks.console.indicator/include/volatility/: atr.h
stocks.console.indicator/src/: macd.cpp  obv.cpp  rsi.cpp  sma.cpp  stochastic_oscillator.cpp
stocks.console.indicator/src/momentum/: roc.cpp  stochastic_oscillator.cpp
stocks.console.indicator/src/volatility/: atr.cpp
stocks.console.indicator/src/volume/: obv.cpp
stocks.console.strategy/: pch.h  sma.cpp  sma.h  stocks.console.strategy.cpp  stocks.console.strategy.vcxproj  stocks.console.strategy.vcxproj.filters
stocks.console.utilities/: CMakeLists.txt  date_utilities.cpp  date_utilities.h  formatter.cpp  formatter.h  stocks.console.utilities.vcxproj  stocks.console.utilities.vcxproj.filters  string_utilities.cpp  string_utilities.h  vcpkg.json
stocks.console/include/: account_details.h  asset_validation.h  currency_validation.h  indicator_analysis.h  order.h  sma.h  stock_detail.h  string_utilities.h
stocks.console/include/indicator/: indicator_analysis.h  macd.h  rsi.h  sma.h
stocks.console/include/validation/: asset_validation.h
stocks.console/src/: account_details.cpp  asset_validation.cpp  currency_validation.cpp  date_validation.cpp  indicator_analysis.cpp  order.cpp  stock_detail.cpp  stocks.console.cpp  string_utilities.cpp
stocks.console/src/indicator/: indicator_analysis.cpp  macd.cpp  rsi.cpp  sma.cpp
stocks.console/src/state/: stock_state.cpp
stocks.console/src/validation/: asset_validation.cpp  currency_validation.cpp  date_validation.cpp
test2/: test2.vcxproj
tests/stocks.test/: CMakeLists.txt  CMakePresets.json  RSITest.cpp  stocks.test.vcxproj  stocks.test.vcxproj.filters
tests/stocks.test/Debug/: vc143.idb
tests/stocks.test/Debug/stocks.test.tlog/: CL.command.1.tlog  stocks.test.lastbuildstate
tests/stocks.test/include/: base_test.h
tests/stocks.test/indicator/: rsi_test.cpp  rsi_test.h
tests/stocks.test/src/: base_test.cpp
tests/stocks.test/src/fundamental.analysis/: eps_test.cpp
tests/stocks.test/src/indicator/: macd_test.cpp  obv_test.cpp  roc_test.cpp  rsi_test.cpp  sma_test.cpp  stochastic_oscillator_test.cpp
